--- a/bus02.html
+++ b/bus02.html
@@ -42,7 +42,7 @@
                 nextButton.style.display = "block";
                 document.getElementById("prev").style.display = "none";
             } else {
-                hintMessage.textContent = "HINT🎁: PHOTOSHOP";
+                hintMessage.textContent = "HINT🎁: PHOTOSHOP🌈";
                 hintMessage.style.color = "#b61d1d";
                 nextButton.style.display = "none"; 
             }
