--- a/rainbow03.html
+++ b/rainbow03.html
@@ -47,7 +47,7 @@
                 nextButton.style.display = "block";
                 document.getElementById("prev").style.display = "none";
             } else {
-                hintMessage.textContent = "HINT🎁: 후루룩 짭짭";
+                hintMessage.textContent = "HINT🎁: 🌏";
                 hintMessage.style.color = "#b61d1d";
                 nextButton.style.display = "none";
             }
