--- a/rainbow03.html
+++ b/rainbow03.html
@@ -20,7 +20,7 @@
         <p>아침도 못 먹고 사라진 선물을 쫒느라 당신은 무척이나 배가 고팠습니다.</p>
         <p>냄새가 나는 곳을 찾아 주변을 둘러보니, 한 식당이 눈에 들어왔습니다.</p>
         <p>메뉴판에는 이렇게 적혀 있었습니다.</p>
-        <p id="prev" class="brush" style="font-size: 32px; margin-top: 30px;">@37.4684354 / 126.6508443 <br>
+        <p id="prev" class="brush" style="font-size: 32px; margin-top: 30px;">37.4684354,126.6508443<br>
             선택했던 것은 무엇이었나?
         </p>
     </div>
