--- a/bus02.html
+++ b/bus02.html
@@ -16,8 +16,8 @@
         <h1>빛이 만들어낸 해답</h1>
     </div>
     <div class="box2">
-        <p>버스를 타고 도둑의 흔적이 끊긴 곳에서 내리니, 하늘에는 곱게 무지개가 떠 있었다.</p>
-        <p>잘 살펴보니, 정류장 옆 칸막이에 전단지 하나가 붙어 있다.</p>
+        <p>버스를 타고 도둑의 흔적이 끊긴 곳에서 내리니, 하늘에는 곱게 무지개가 떠 있었습니다.</p>
+        <p>잘 살펴보니, 정류장 옆 칸막이에 전단지 하나가 붙어 있네요.</p>
         <p id="prev"><img src="./images/bus01.png" alt="" style="width: 100%; margin-top: 20px;"></p>
     </div>
     <!-- 정답 입력 칸 -->
