--- a/code05.html
+++ b/code05.html
@@ -17,7 +17,7 @@
     </div>
     <div class="box2">
         <p>의문을 뒤로하고 다시 업무에 집중하던 중, 메일 하나가 도착했습니다.</p>
-        <p>한 번도 들어본 적 없는 업체였지만, 당신은 우선 내용부터 확인하기로 했습니다.</p>
+        <p>한 번도 들어본 적 없는 업체였지만, 당신은 우선 내용부터 확인하기로 합니다.</p>
         <p>첨부된 파일을 열자 짧은 코드 몇 줄이 적혀 있었습니다.</p>
         <p>
             <pre style="margin: 0; line-height: 1.6;" id="prev">
