--- a/dish04.html
+++ b/dish04.html
@@ -18,7 +18,7 @@
     <div class="box2">
         <p>아무리 찾아도 도둑은 온데간데없이 사라지고 말았습니다.</p>
         <p>당신은 하는 수 없이 다시 회사로 돌아왔습니다.</p>
-        <p>업무를 보려고 컴퓨터를 켜자, 모니터 화면에 다음과 같은 문자가 쓰여 있었습니다.</p>
+        <p>업무를 보려고 컴퓨터를 켜자, 모니터 화면에 다음과 같은 문자가 쓰여 있습니다.</p>
         <p id="prev"><img src="./images/code01.png" style="margin-top: 20px ; width: 100%;"></p>
     </div>
     <!-- 정답 입력 칸 -->
