--- a/key007.html
+++ b/key007.html
@@ -21,7 +21,7 @@
     </div>
     <div class="box2">
         <p>해냈습니다!</p>
-        <p>열쇠로 흡연실 문을 열고 들어가자, 빨간 쿠션 위에 선물 교환권이 놓여 있었습니다.</p>
+        <p>열쇠로 흡연실 문을 열고 들어가자, 빨간 쿠션 위에 선물 교환권이 놓여 있습니다.</p>
         <p>당신은 고생 끝에 드디어 생일 선물을 받을 수 있게 되었답니다.</p>
         <p class="hidden_view">그런데 대체 누가 선물을 훔쳐갔던 걸까요? 🤔</p>
     </div>
