--- a/loop06.html
+++ b/loop06.html
@@ -16,10 +16,10 @@
         <h1>운수 좋은 날</h1>
     </div>
     <div class="box2">
-        <p>생일 아침부터 되는 일이 하나도 없습니다.</p>
+        <p>생일 아침부터 되는 일이 하나도 없네요.</p>
         <p>선물은 도둑맞았고, 컴퓨터도 먹통이 되어 버렸습니다.</p>
-        <p>당신은 한숨을 쉬며 담배나 뻑뻑 피우려 흡연실로 향했지만, 문이 잠겨 있었습니다.</p>
-        <p>게다가 누군가 빨간 페인트로 낙서까지 휘갈겨 놓은 상태였습니다!</p>
+        <p>당신은 한숨을 쉬며 담배나 뻑뻑 피우려 흡연실로 향했지만, 웬일인지 문이 잠겨 있었습니다.</p>
+        <p>게다가 누군가 빨간 페인트로 낙서까지 휘갈겨 놓았습니다!</p>
         <p id="prev" class="brush" style="color: #b51a1a; font-weight: 600; font-size: 40px; margin-top: 30px;">"이제 모든 조각을 하나로 합칠 시간이다."</p>
     </div>
     <!-- 정답 입력 칸 -->
