--- a/stage01.html
+++ b/stage01.html
@@ -16,8 +16,8 @@
         <h1>느림의 미학</h1>
     </div>
     <div class="box2">
-        <p>도둑의 흔적을 따라 이동하던 중, 쪽지 하나를 발견할 수 있었다.</p>
-        <p>작은 종이에는 이렇게 쓰여 있다.</p>
+        <p>도둑의 흔적을 따라 이동하던 중, 쪽지 하나를 발견할 수 있었습니다.</p>
+        <p>작은 종이에는 이렇게 쓰여 있습니다.</p>
         <p id="prev" class="brush" style="margin-top: 30px;">"늘 기다림을 강요한다.<br> 
             정작 나타나고 나면 헤어지기까지는 긴 시간이 걸린다.<br>
             언제 올지 예측할 수 없고, 불쑥 나타나는가 하면 초조함이 쌓일수록 더욱 늦게 오곤 한다.<br>
